# rs_server

./: Cargo.toml  README.md
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickes.rs
tests/: quick_dev.rs
