[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ['full']}
axum ="0.6"
# Serde / json
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[dev-dependencies]
anyhow = "1"
cargo-watch = "8.5.2"
# uses reqwest & cookie store.
httpc-test = "0.1.1"
