[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ['full']}
axum ={version = "0.6", features = ["macros"]}
# It usefull for static file routing
tower-http = {version = "0.4", features = ["fs"]}
tower-cookies = "0.9"
# Serde / json
serde = {version = "1", features = ["derive"]}
serde_json = "1"


[dev-dependencies]
anyhow = "1"
cargo-watch = "8.5.2"
# uses reqwest & cookie store.
httpc-test = "0.1.1"
